cv & statements improvements

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -90,7 +90,7 @@ Georgia Institute of Technology\\
 840 McMillan Street\\
 Atlanta, GA  \texttt{30332--0456}
 USA\\[.2cm]
-Phone: \texttt{706-239-0127}\\[.2cm]
+Phone: \texttt{706-239-0127}\\
 email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
 
@@ -100,16 +100,16 @@ email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
 
 %%\hrule
 \section*{Areas of Interest}
-Human-computer interaction • Design of digital musical instruments (DMIs) • Tangible, physical \& social computing • Arts \& social sciences research methods • STEAM education • Real-time interactive systems for music performance • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Data visualization • Creative programming • Women in music tech
+Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming 
 
 %\hrule
 \section*{Education}
 \noindent
 \years{2015}\textsc{PhD}, The Open University (OU), UK \& \textsc{Dra.}, Universitat Pompeu Fabra (UPF), Spain.\\
-Major: Music computing.\\ 
+Major: Music computing \& HCI.\\ 
 Dissertation: \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}.\\
 \years{2008}\textsc{MSc} in Information, Communication and Audiovisual Media Technologies, UPF, Spain.\\
-Major: HCI \& Music computing.\\ 
+Major: Music computing \& HCI.\\ 
 Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{1999}\textsc{Master} in Video, Animation and Multimedia Design, Media Art Institute Fak d'Art, Spain.\\
 \years{1996}\textsc{BA, MA} in Social and Cultural Anthropology, Universitat de Barcelona (UB), Spain.
@@ -141,7 +141,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
 %{\small Qualitative data collection and analysis (6 sites), development of research tools and processes, dissemination activities and paper writing of results.}\\
-\years{02/2004--06/2010}\textsc{Co-founder, Project Manager, Web Designer \& Web Developer}. Nodular Soft. Barcelona. \\
+\years{02/2004--06/2010}\textsc{Co-Founder, Project Manager, Web Designer \& Web Developer}. Nodular Soft. Barcelona. \\
 %{\small Freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.} \\
 \years{01/2008--07/2009}\textsc{Web Designer \&  Web Developer Project Officer}. Music Technology Group, UPF. Barcelona. \\
 %{\small Web design and web development of the web 2.0 Sons de Barcelona (barcelona.freesound.org). Web design of the corporate portal of the research group MTG (mtg.upf.edu). Graphic design of the corporate brochure of the MTG (courses 2008--2009 and 2009--2010).}\\
@@ -171,7 +171,7 @@ Role: Creator \& Director.\\
 %\hrule
 \section*{Grants \& Funding}
 
-\subsection*{As Principal Investigator}
+\subsection*{Principal Investigator}
 
 \years{11/2003-10/2004}\textsc{Teaching innovation project grant} \\
 Funding body: Fundació Caixa de Sabadell. \\
@@ -179,7 +179,32 @@ Project: ``Crossmedia infantil: Estudio sobre las nuevas tecnologías y la comu
 Role: PI. \\
 Collaborators: Eladi Martos (Co-PI), UB. \\
 Total Dollar Amount: \$3,300\\
-Candidate’s Share: 50\% (\$1,650)\\ 
+Candidate’s Share: 50\% (\$1,650)
+
+\subsection*{Collaborator}
+
+\years{09/2016-08/2020}\textsc{Advancing Informal STEM Learning Grant} \\
+Funding body: National Science Foundation (NSF). \\
+Project: ``Collaborative Research: Mixing Learning Experiences for Computer Programming Across Museums, Classrooms, and the Home Using Computational Music''. Award Number: 1612644. \\
+Organization: Georgia Tech Research Corporation. \\
+Role: Postdoctoral Fellow and Co-Writer of the grant proposal. \\
+Collaborators: Brian Magerko (PI), Jason Freeman (Co-PI), Mike Horn (Co-PI).\\
+Total Dollar Amount: \$2,517,690.00
+
+\subsection*{Organization Member}
+
+\years{10/2016}\textsc{Women in Music Tech Fall Event} \\
+Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\[.1cm]
+Funding body: School of Music, Georgia Tech. \\
+Total Dollar Amount: \$2,500\\[.1cm]
+Funding body: College of Design, Georgia Tech. \\
+Total Dollar Amount: \$2,000\\[.1cm]
+Funding body: ADVANCE program, Georgia Tech. \\
+Total Dollar Amount: \$1,000\\[.1cm]
+Funding body: Women's Resource Center, Georgia Tech \\
+Total Dollar Amount: \$250
+
+\subsection*{Creator | Director}
 
 \years{09/2001--08/2002}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
@@ -187,7 +212,7 @@ Project: ``Transdata Pr.''.  \\
 Role: Creator, Video Editor \& Director.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
 Total Dollar Amount: \$3,300 \\ 
-Candidate’s Share: 50\% (\$1,650) \\
+Candidate’s Share: 50\% (\$1,650)\\[.5cm] 
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
@@ -197,15 +222,7 @@ Collaborators: Gerard Roma (music). \\
 Grant Amount: 3,000€ (\$3,335). \\
 Candidate’s Share: 50\% (\$1,650)  
 
-\subsection*{As Collaborator}
 
-\years{09/2016-08/2020}\textsc{Advancing Informal STEM Learning Grant} \\
-Funding body: National Science Foundation (NSF). \\
-Project: ``Collaborative Research: Mixing Learning Experiences for Computer Programming Across Museums, Classrooms, and the Home Using Computational Music''. Award Number: 1612644. \\
-Organization: Georgia Tech Research Corporation. \\
-Role: Postdoctoral Fellow and Co-Writer of the grant proposal. \\
-Collaborators: Brian Magerko (PI), Jason Freeman (Co-PI), Mike Horn (Co-PI).\\
-Total Dollar Amount: \$2,517,690.00
 
 \section*{Research Profiles}
 \noindent
@@ -229,15 +246,14 @@ Total Dollar Amount: \$2,517,690.00
 
 \subsection*{Journal Articles}
 \noindent
-\years{2016c}Jewitt, C., Price, S., Xambó, A. (2016). “Conceptualising and researching the body in digital contexts: towards new methodological conversations across the arts and social sciences". \emph{Qualitative Research}.\\
-\years{2016b}Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring social interaction with a tangible music interface". \emph{Interacting with Computers}.\\
+\years{2016c}Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring social interaction with a tangible music interface". \emph{Interacting with Computers}.\\
+\years{2016b}Jewitt, C., Price, S., Xambó, A. (2016). “Conceptualising and researching the body in digital contexts: towards new methodological conversations across the arts and social sciences". \emph{Qualitative Research}.\\
 \years{2016a}Jewitt, C., Xambó, A. and Price, S. (2016). “Exploring methodological innovation in the social sciences: the body in digital environments and the arts". \emph{International Journal of Social Research Methodology}.\\
 \years{2013b}Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2013). “Let's jam the Reactable: peer learning during musical improvisation with a tabletop tangible interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
 \years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., Xambó, A., Gómez, E. and Herrera, P. (2013). “Semantic audio content-based music recommendation and visualization based on user preference examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2016f}Xambó, A., Shah, P., Freeman, J., Magerko, B., Michaud, C. (under review) The skill of debugging: informing the design of CS+Arts learning environments for novice programmers.\\ 
 \years{2016e}Xambó, A., Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
 \years{2016d}Tsuchiya, T., Xambó, A., Freeman, J. (2016). “Adapting DAW-driven musical language to live coding: a case study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016c}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., Xambó, A. (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
@@ -265,7 +281,7 @@ Total Dollar Amount: \$2,517,690.00
 \noindent
 
 \years{2008}Xambó, A. (2008). Interfaces for Sketching Musical Compositions. Unpublished master's thesis. UPF.\\ 
-\years{2004}Xambó, A. and Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Fundació Caixa de Sabadell with the support of UB.
+\years{2004}Xambó, A. and Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
 
 
 %\section*{Talks, Presentations, Demos \& Workshops}
@@ -273,50 +289,50 @@ Total Dollar Amount: \$2,517,690.00
 \section*{Talks \& Oral Presentations}
 
 \subsection*{External}
-\years{2016e} Xambó, A. (July 2, 2016). Challenges and new directions for collaborative live coding in the classroom. \emph{ICLI 2016}. Brighton, UK.\\
-\years{2016c} Dobson, L. and Xambó, A. (April 22, 2016). Anna Xambó and Liz Dobson in conversation. Keynote session. \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
-\years{2015a} Xambó, A. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. Lightning talk. \emph{RESPECT 2015}. Charlotte, NC. US.\\
-\years{2014c} Xambó, A. (July 1, 2014). SoundXY4: Supporting tabletop collaboration and awareness with ambisonics spatialisation. \emph{NIME 2014}. London.\\
-\years{2014b} Xambó, A. (April 30, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{CHI 2014}. Toronto, ON.\\
-\years{2013b} Xambó, A. (November 11, 2013). Tabletop tangible interfaces for music performance and implications for tabletop research. \emph{School of Computing}, University of Kent. Kent, UK.\\
-\years{2011d} Xambó, A. (August 2, 2011). Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language. \emph{ICMC '11}. Huddersfield, UK.\\
-\years{2011c} Xambó, A. (July 4, 2011). Collaborative music interaction on tabletops: An HCI approach?. \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
-\years{2010c} Xambó, A. (July 23, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{SMC '10}. Barcelona.\\
-\years{2008c} Alsina, A., Ferrete, J., Roma, G. and Xambó, A. (October 31, 2008). Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido. \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
-\years{2008b} Alsina, A., Ferrete, J., Roma, G. and Xambó, A. (2008). Freesound.org, Freesound Radio i Sons de Barcelona. \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
-\years{2008a} Alsina, A., de Jong, B., Loscos, A., Roma, G. and Xambó, A. (September 27, 2008). Influencia de la tecnología en la evolución de la música y la industria. \emph{NetAudio}, CCCB. Barcelona.\\
-\years{2007}Roma, G. and Xambó, A. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, Netherlands.
+\years{2016e} \textsc{Oral Presenter}. Xambó, A. (July 2, 2016). Challenges and new directions for collaborative live coding in the classroom. \emph{ICLI 2016}. Brighton, UK.\\
+\years{2016c} \textsc{Keynote Speaker}. Dobson, L. and Xambó, A. (April 22, 2016). Anna Xambó and Liz Dobson in conversation. \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
+\years{2015a} \textsc{Lighting Talk Speaker}. Xambó, A. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. US.\\
+\years{2014c} \textsc{Oral Presenter}. Xambó, A. (July 1, 2014). SoundXY4: Supporting tabletop collaboration and awareness with ambisonics spatialisation. \emph{NIME '14}. London.\\
+\years{2014b} \textsc{Oral Presenter}. Xambó, A. (April 30, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{CHI '14}. Toronto, ON.\\
+\years{2013b} \textsc{Oral Presenter}. Xambó, A. (November 11, 2013). Tabletop tangible interfaces for music performance and implications for tabletop research. \emph{School of Computing}, University of Kent. Kent, UK.\\
+\years{2011d} \textsc{Oral Presenter}. Xambó, A. (August 2, 2011). Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language. \emph{ICMC '11}. Huddersfield, UK.\\
+\years{2011c} \textsc{Oral Presenter}. Xambó, A. (July 4, 2011). Collaborative music interaction on tabletops: An HCI approach?. \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
+\years{2010c} \textsc{Oral Presenter}. Xambó, A. (July 23, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{SMC '10}. Barcelona.\\
+\years{2008c} \textsc{Panel Member}. Alsina, A., Ferrete, J., Roma, G. and Xambó, A. (October 31, 2008). Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido. \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
+\years{2008b} \textsc{Panel Member}. Alsina, A., Ferrete, J., Roma, G. and Xambó, A. (2008). Freesound.org, Freesound Radio i Sons de Barcelona. \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
+\years{2008a} \textsc{Panel Member}. Alsina, A., de Jong, B., Loscos, A., Roma, G. and Xambó, A. (September 27, 2008). Influencia de la tecnología en la evolución de la música y la industria. \emph{NetAudio}, CCCB. Barcelona. \href{https://www.youtube.com/watch?v=6JlCCvYXrHY}{[video]}\\
+\years{2007}\textsc{Oral Presenter}. Roma, G. and Xambó, A. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
 
 \subsection*{Own Institution}
-\years{2016c} Xambó, A.; Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
-\years{2016b} Xambó, A. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
-\years{2016a} Xambó, A. (January 26, 2016). EarSketch: computational music remixing for all. Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
-\years{2015c} Xambó, A. (September 3, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2015b} Xambó, A. (August 27, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2015a} Xambó, A. (August 24, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2014} Xambó, A. (April 9, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{London Knowledge Lab}. London.\\
-\years{2013} Xambó, A. (June 2, 2013). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
-\years{2012} Xambó, A. (June 12, 2012). Collaboration on interactive tabletops for music performance: An exploratory study. \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
-\years{2011b} Xambó, A. (June 16, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011a} Xambó, A. (May 17, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
-\years{2010b} Xambó, A. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
-\years{2010a} Xambó, A. (May, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.\\
+\years{2016c} \textsc{Panel Member}. Xambó, A.; Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
+\years{2016b} \textsc{Oral Presenter}. Xambó, A. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
+\years{2016a} \textsc{Oral Presenter}. Xambó, A. (January 26, 2016). EarSketch: computational music remixing for all. Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
+\years{2015c} \textsc{Oral Presenter}. Xambó, A. (September 3, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
+\years{2015b} \textsc{Oral Presenter}. Xambó, A. (August 27, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
+\years{2015a} \textsc{Oral Presenter}. Xambó, A. (August 24, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
+\years{2014} \textsc{Oral Presenter}. Xambó, A. (April 9, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{London Knowledge Lab}. London.\\
+\years{2013} \textsc{Oral Presenter}. Xambó, A. (June 2, 2013). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
+\years{2012} \textsc{Oral Presenter}. Xambó, A. (June 12, 2012). Collaboration on interactive tabletops for music performance: An exploratory study. \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
+\years{2011b} \textsc{Oral Presenter}. Xambó, A. (June 16, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011a} \textsc{Oral Presenter}. Xambó, A. (May 17, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
+\years{2010b} \textsc{Oral Presenter}. Xambó, A. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
+\years{2010a} \textsc{Oral Presenter}. Xambó, A. (May, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.\\
 
 \section*{Poster Presentations, Demos \& Workshops}
 
 \subsection*{Poster Presentations \& Demos}
 
-\years{2016c} Xambó, A. (August 11, 2016). Learning to code through MIR. \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
-\years{2016b} Roma, G.; Xambó, A. and Freeman, J. (July 2, 2016). Do the Buzzer Shake. \emph{ICLI 2016 Conference}. Brighton, UK.\\
-\years{2016a} Xambó, A. (April 29, 2014). Towards an integrated methodological framework for understanding embodiment in HCI. \emph{CHI 2014 Conference}. Toronto, ON.\\
-\years{2012b} Xambó, A. (January 10, 2012). Tangible Additive Sound Synthesis (TASS) Demo. \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
-\years{2012a} Xambó, A. (June 17, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011} Xambó, A. (March 8, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.
+\years{2016c} \textsc{Poster \& Demo Presenter}. Xambó, A. (August 11, 2016). Learning to code through MIR. \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
+\years{2016b} \textsc{Poster \& Demo Presenter}. Roma, G.; Xambó, A. and Freeman, J. (July 2, 2016). Do the Buzzer Shake. \emph{ICLI 2016 Conference}. Brighton, UK.\\
+\years{2016a} \textsc{Poster Presenter}. Xambó, A. (April 29, 2014). Towards an integrated methodological framework for understanding embodiment in HCI. \emph{CHI 2014 Conference}. Toronto, ON. \href{https://www.youtube.com/watch?v=pRDHuCUltwo}{[video]}\\
+\years{2012b} \textsc{Demo Presenter}. Xambó, A. (January 10, 2012). Tangible Additive Sound Synthesis (TASS). \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
+\years{2012a} \textsc{Poster Presenter}. Xambó, A. (June 17, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011} \textsc{Poster Presenter}. Xambó, A. (March 8, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.
 
 \subsection*{Workshops}
 
 \years{2013} Xambó, A. (May 2	, 2013). Introduction to SuperCollider. \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} Xambó, A.; Roma, G. and Bovermann, T. (April 15, 2012). Tangible musical interfaces with SuperCollider. \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.\\[.7cm]
+\years{2012} Xambó, A.; Roma, G. and Bovermann, T. (April 15, 2012). Tangible musical interfaces with SuperCollider. \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
 
 \section*{Discography}
 
@@ -330,9 +346,9 @@ Total Dollar Amount: \$2,517,690.00
 \years{1992}Sosa's Cáustica. (1992). \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.\\
 
 \subsection*{Participation in Compilations}
-\years{2016}peterMann. (2016). Go wild y'all. On \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2015}peterMann. (2015). ldnsktch01. On \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2010}peterMann. (2010). init11. On \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.\\
+\years{2016}peterMann. (2016). Go wild y'all (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2015}peterMann. (2015). ldnsktch01(1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2010}peterMann. (2010). init11 (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.\\
 
 \subsection*{Broadcasting}
 
@@ -350,9 +366,9 @@ Total Dollar Amount: \$2,517,690.00
 
 \subsection*{Solo Performances}
 
-\years{2016}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Lancaster, UK.\\
-\years{2016}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Lancaster, UK.\\
-\years{2013}Xambó, A. (October 4, 2013). Live. \emph{Perspectives on multichannel live coding}. PHONOS. Barcelona.\\
+\years{2016}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
+\years{2016}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
+\years{2013}Xambó, A. (October 4, 2013). Live. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona.\\
 \years{2012}peterMann. (September 20, 2012). Live. \emph{Crispy Crunchy Creaky}. Niu. Barcelona.\\
 \years{2006}peterMann. (June 10, 2006). Live. \emph{5a Mostra Sonora i Visual | Convent Sant Agustí}. Barcelona.
 
@@ -365,20 +381,26 @@ Total Dollar Amount: \$2,517,690.00
 
 \subsection*{Awarded Music Hacks}
 
-\years{2014}Roma, G. and Xambó, A. (2014). crowdj. \emph{Music Hack Day}. Barcelona. Rdio prize.\\
-Role: Concept, part of the implementation and user interface.\\
-\years{2012b}Xambó, A. and Roma, G. (2012). Soundscape Turntablism. \emph{Music Hack Day}. Barcelona. Reactable and Zvooq prizes.\\  
-Role: Concept, part of the implementation and tangible user interface.\\
-\years{2012a}Roma, G. and Xambó, A. (2012). Soundscape DJ. \emph{Music Tech Fest}. London. Warp Records prize. \\
-Role: Concept, part of the implementation and tangible user interface.\\
+\years{2014}crowdj. \emph{Music Hack Day}. Barcelona.\\ 
+Prize: Rdio prize.\\
+Role: Concept, part of the implementation and user interface design.\\
+Collaborator: Gerard Roma.\\
+\years{2012b}Soundscape Turntablism. \emph{Music Hack Day}. Barcelona.\\ 
+Prize: Reactable prize, Zvooq prize.\\  
+Role: Concept, part of the implementation and tangible user interface design.\\
+Collaborator: Gerard Roma.\\
+\years{2012a}Soundscape DJ. \emph{Music Tech Fest}. London.\\ 
+Prize: Warp Records prize. \\
+Role: Concept, part of the implementation and tangible user interface design.\\
+Collaborator: Gerard Roma.
 
 \subsection*{Code}
 \years{2016}Algonoise. (2016). Retrieved October 18 2016, from \href{https://github.com/axambo/algonoise}{https://github.com/axambo/algonoise}\\
 Role: Concept and implementation.\\
 \years{2014}SoundXY4: The Art of Noise. (2014). Retrieved October 18 2016, from \href{https://github.com/axambo/soundxy4}{https://github.com/axambo/soundxy4}\\
-Role: Concept and implementation.\\
+Role: Concept, implementation and tangible user interface design.\\
 \years{2012}SoundXY. (2012). Retrieved October 18 2016, from \href{https://github.com/axambo/soundxy2}{https://github.com/axambo/soundxy2}\\
-Role: Concept and implementation.
+Role: Concept, implementation and tangible user interface design.
 
 \subsection*{Video Creations \& Animation Films}
 
@@ -404,7 +426,7 @@ Role: Co-filming and visuals.\\
 Collaborators: Babylon Cannes (concept).\\
 
 \years{09/2001}\emph{Eme3density, Second Architectural Market}, Centre de Cultura Contemporània de Barcelona (CCCB), Barcelona.\\
-Role: Visuals. \\ %(Flash animation and programming of the website presented in the event).\\
+Role: Visuals \& Flash programming. \\ %(Flash animation and programming of the website presented in the event).\\
 Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 
 %\hrule
@@ -435,17 +457,17 @@ Course: \emph{Web Design with DreamWeaver} (24 h). \# Students: $\sim$5.\\
 Course: \emph{Multimedia Content with Adobe Flash} (16 h). \# Students: $\sim$5. \\
 Course: \emph{Flash Programming} (20 h) \# Students: $\sim$5.\\ 
 Course: \emph{Theoretical Aspects in Graphic Design} (12 h). \# Students: $\sim$5.\\ 
-Course: \emph{Video Edition with Adobe Premiere} (60 h) \# Students: $\sim$1.
+Course: \emph{Video Edition with Adobe Premiere} (60 h) \# Students: 1.
 
 \subsection*{Preschool \& Primary School Courses}
 \noindent
 
 \years{03/2004--06/2004}Escola Magòria, Barcelona.\\
-Course: \emph{Crossmedia infantil} (8 h). \# Students (6--7 years old): XX\\
+Course: \emph{Crossmedia infantil} (11 h). \# Students (6--7 years old): $\sim$8.\\
 \years{03/2004--05/2004}Escola Costa i Llobera, Barcelona.\\ 
-Course: \emph{Crossmedia infantil} (8 h). \# Students (9--10 years old): XX\\
+Course: \emph{Crossmedia infantil} (9 h). \# Students (9--10 years old): $\sim$15.\\
 \years{03/2004--05/2004}Escola Glòries, Barcelona.\\
-Course: \emph{Crossmedia infantil} (8 h). \# Students (3--4 years old): XX
+Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.
 
 
 \section*{Additional Experience}
@@ -455,21 +477,21 @@ Course: \emph{Crossmedia infantil} (8 h). \# Students (3--4 years old): XX
 \years{2016}Women in Music Tech. (November 2, 2016). The Garage. Atlanta, GA, USA.\\
 \years{2016}Audience device participation. (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}Live coding and the audiovisual web. (April 4, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2013}Perspectives on multichannel live coding. (October 4, 2013). Sala Polivalent UPF, PHONOS. Barcelona.\\
+\years{2013}Perspectives on multichannel live coding. (October 4, 2013). PHONOS. Sala Polivalent, UPF. Barcelona.\\
 \years{2013}Live Coding Sessions II. (March 22, 2013). Niu. Barcelona.\\
 \years{2012}Live Coding Sessions. (March 15, 2012). Niu. Barcelona.
 
 \subsection*{Blogging}
-\years{2016--}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-creator and co-author.\\ 
-\years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-creator and co-author. \\ 
-\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-creator and author.\\
-\years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and author.  
+\years{2016--}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator and Co-Author.\\ 
+\years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
+\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Author.\\
+\years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author.  
 
 \subsection*{Artistic Collective Projects}
 
-\years{2008--present}Co-Founder of the experimental electronic music label Carpal Tunnel, Barcelona.\\
-\years{2002}Co-Founder and Member of the audiovisual electronic music band b4ng, Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13, Barcelona.
+\years{2008--present}Co-Founder of the experimental electronic music label Carpal Tunnel. Barcelona.\\
+\years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[.2cm] 
 
 
 %\hrule
@@ -479,10 +501,10 @@ Course: \emph{Crossmedia infantil} (8 h). \# Students (3--4 years old): XX
 \subsection*{Committee Member / Conference Chair}
 \noindent
 
-\years{2016}Co-Founder \& Co-Chair. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016}Music/Artworks Chair. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2011}Session Chair (``Laptop/Coding/NI''). \emph{ICMC '11}. Huddersfield, UK.\\
-\years{2011}Committee Member. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
+\years{2016}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016}\textsc{Music/Artworks Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2011}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{ICMC '11}. Huddersfield, UK.\\
+\years{2011}\textsc{Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
 \subsection*{Conference Reviewer}
 \noindent
@@ -494,26 +516,27 @@ Course: \emph{Crossmedia infantil} (8 h). \# Students (3--4 years old): XX
 \years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2016}\emph{International Conference on Live Interfaces} (2016).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
+\years{2017}\emph{National Student Electronic Music Event} (2017).\\
 \years{2016}\emph{Web Audio Conference} (2016).
 
 \subsection*{Journal Reviewer}
 \noindent
 
-\years{2016--}\emph{Interacting with Computers}. Oxford Journals.\\
-\years{2015--}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
-\years{2016--}\emph{Qualitative Research}. Sage Publications.
+\years{2015--present}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
+\years{2016--present}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2016--present}\emph{Qualitative Research}. Sage Publications.
 
 \subsection*{Jury Member}
 \noindent
 
-\years{2016}Jury Member. \emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
+\years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 %\hrule
 \subsection*{Consultancies}
 \noindent
 
 \years{08/2015--10/2015}\emph{Flux Project}, Atlanta, GA, USA.\\
-Consulting on development of interactive audio components of an art project for Flux Night 2015.\\
+Consulting on the development of interactive audio components of an art project for Flux Night 2015.\\
 Collaborators: Jason Freeman (coordinator), Gerard Roma.
 
 \subsection*{Entrepreneurship}
@@ -542,12 +565,12 @@ Catalan (native or bilingual proficiency), Spanish (native or bilingual proficie
 \noindent
 
 Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
-Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, XHTML, XML.\\
+Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version control systems: CVS, Git, Subversion.\\
 Music Apps: Cubase, Live, Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
 Video analysis Apps: ELAN, VCode.\\
-Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress).
+Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.
 
 
 %\vspace{1cm}
